Added first basic UI Tests